--- a/boots.html
+++ b/boots.html
@@ -43,10 +43,10 @@
     </nav>
 
   </header>
-  <div class="container-fluid flex-wrap">
+  <div class="container-fluid">
     <div class="container">
       <div class="row">
-        <article class=" border border-secondary col-xs-12 	col-md-12	 col-lg-4 	col-xl-4">
+        <article class=" border border-secondary col-xs-12 	col-sm-6 col-md-4	 col-lg-4 	col-xl-4">
           <h2>Block 1</h2>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
@@ -54,7 +54,7 @@
             lectus ut ligula faucibus suscipit. Proin eget ante faucibus, posuere sapien a, auctor augue. In hac habitasse platea dictumst. Donec mattis justo et porta commodo. Nunc semper tempor magna ut pharetra. Aenean bibendum, arcu vitae laoreet
             pharetra, nisl mi accumsan ex, at faucibus leo nisi at erat. In hac habitasse platea dictumst. Phasellus dictum dictum lacus, eget sagittis nulla. In lacinia tincidunt nibh, ut ultrices urna viverra posuere.</p>
         </article>
-        <article class="border border-secondary col-xs-12 	col-md-12	 col-lg-4 	col-xl-4">
+        <article class="border border-secondary col-xs-12 	col-sm-6 col-md-4	 col-lg-4 	col-xl-4">
           <h2>Block 2</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
@@ -62,8 +62,8 @@
             lectus ut ligula faucibus suscipit. Proin eget ante faucibus, posuere sapien a, auctor augue. In hac habitasse platea dictumst. Donec mattis justo et porta commodo. Nunc semper tempor magna ut pharetra. Aenean bibendum, arcu vitae laoreet
             pharetra, nisl mi accumsan ex, at faucibus leo nisi at erat. In hac habitasse platea dictumst. Phasellus dictum dictum lacus, eget sagittis nulla. In lacinia tincidunt nibh, ut ultrices urna viverra posuere.</p>
         </article>
-        <aside class="border border-secondary col-xs-12 	col-md-12	 col-lg-4 	col-xl-4">
-          <h2>Block 3</h2>
+        <aside class="border border-secondary col-xs-12  col-sm-12 	col-md-4	 col-lg-4 	col-xl-4">
+          <h2>Aside</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
             facilisis et non nulla. Fusce ac urna sed leo dictum molestie. Praesent tempor nibh quis pellentesque pretium. Nam cursus dui ac risus rutrum, nec porta magna luctus. Vestibulum quis velit ultrices, facilisis libero ac, commodo ex. Fusce egestas
@@ -72,7 +72,7 @@
         </aside>
       </div>
       <div class="row">
-        <article class=" border border-secondary col-xs-12 	col-md-12	 col-lg-3 	col-xl-3">
+        <article class=" border border-secondary col-xs-12 	col-sm-4 col-md-3	 col-lg-3 	col-xl-3">
           <h2>Block 1</h2>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
@@ -80,7 +80,7 @@
             lectus ut ligula faucibus suscipit. Proin eget ante faucibus, posuere sapien a, auctor augue. In hac habitasse platea dictumst. Donec mattis justo et porta commodo. Nunc semper tempor magna ut pharetra. Aenean bibendum, arcu vitae laoreet
             pharetra, nisl mi accumsan ex, at faucibus leo nisi at erat. In hac habitasse platea dictumst. Phasellus dictum dictum lacus, eget sagittis nulla. In lacinia tincidunt nibh, ut ultrices urna viverra posuere.</p>
         </article>
-        <article class="border border-secondary col-xs-12 	col-md-12	 col-lg-3 	col-xl-3">
+        <article class="border border-secondary col-xs-12 	col-sm-4 col-md-3	 col-lg-3 	col-xl-3">
           <h2>Block 2</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
@@ -88,7 +88,7 @@
             lectus ut ligula faucibus suscipit. Proin eget ante faucibus, posuere sapien a, auctor augue. In hac habitasse platea dictumst. Donec mattis justo et porta commodo. Nunc semper tempor magna ut pharetra. Aenean bibendum, arcu vitae laoreet
             pharetra, nisl mi accumsan ex, at faucibus leo nisi at erat. In hac habitasse platea dictumst. Phasellus dictum dictum lacus, eget sagittis nulla. In lacinia tincidunt nibh, ut ultrices urna viverra posuere.</p>
         </article>
-        <article class="border border-secondary col-xs-12 	col-md-12	 col-lg-3 	col-xl-3">
+        <article class="border border-secondary col-xs-12 	col-sm-4 col-md-3	 col-lg-3 	col-xl-3">
           <h2>Block 3</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
@@ -96,7 +96,7 @@
             lectus ut ligula faucibus suscipit. Proin eget ante faucibus, posuere sapien a, auctor augue. In hac habitasse platea dictumst. Donec mattis justo et porta commodo. Nunc semper tempor magna ut pharetra. Aenean bibendum, arcu vitae laoreet
             pharetra, nisl mi accumsan ex, at faucibus leo nisi at erat. In hac habitasse platea dictumst. Phasellus dictum dictum lacus, eget sagittis nulla. In lacinia tincidunt nibh, ut ultrices urna viverra posuere.</p>
         </article>
-        <article class="border border-secondary col-xs-12 	col-md-12	 col-lg-3 	col-xl-3">
+        <article class="border border-secondary col-xs-12 	offset-sm-4 col-sm-4 offset-md-0 col-md-3	 col-lg-3 	col-xl-3">
           <h2>Block 4</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tristique lacus vitae consequat blandit. Praesent sed nisi non tellus ultricies ultrices. Etiam ut pellentesque urna. Ut sollicitudin, leo eu finibus varius, sem felis varius ex,
             a convallis nulla nulla sed sem. Cras porttitor turpis tempus, efficitur elit vel, commodo elit. Praesent tempus lacinia eros, sit amet placerat risus dapibus ac. Donec eget cursus odio, in lacinia mauris. Proin in justo sit amet libero sagittis
